third_party/move/move-compiler-v2/tests/checking/typing/index_err_2.exp

Diagnostics:
error: expected `vector<struct{value}>` but found a value of type `X<integer>`
   ┌─ tests/checking/typing/index_err_2.move:11:17
   │
11 │         assert!(x[0].value == 2, 0);
   │                 ^
